<resources>
    <string name="app_name">Ibex</string>
    <string name="data_entry">Data Entry</string>
    <string name="data_display">Data Display</string>
    <string name="delete_all">Delete All</string>
    <string name="exportFiles">Export Files</string>
    <string name="import_file">Import File</string>
    <string name="profile_image">Profile Image</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="item_description">Item Description</string>
    <string name="itemDescription">Item Description:</string>
    <string name="quantity">Item Quantity:</string>
    <string name="itemQuantity">Enter Item Quantity</string>
    <string name="item_quantity">Item Quantity</string>
    <string name="category_name">Category Name:</string>
    <string name="selectCategory">Select a category</string>
    <string name="deleteAllDialog">Delete All Data</string>
    <string name="confirmDeleteDialog">Are you sure you want to delete all data?</string>
    <string name="yesDeleteDialog">Yes</string>
    <string name="noDeleteDialog">No</string>
    <string name="dataDeleted">All data deleted successfully</string>
    <string name="firstCreatedExcelFile">Excel file for</string>
    <string name="secondCreatedExcelFile"> created successfully</string>
    <string name="failedCreateExcelFile">Failed to create Excel file for </string>
    <string name="permessionAccepted">Permission accepted</string>
    <string name="permessionDenied">Permission denied</string>
    <string name="importSucceded">Excel file imported successfully</string>
    <string name="importFailed">Failed to import Excel file</string>
    <string name="login">Login</string>
    <string name="loginSucceeded">Login successful</string>
    <string name="connectionSucceeded">Connected successfully!</string>
    <string name="getUsersSucceeded">Get Users successfully!</string>
    <string name="getUsersFailed">Failed to get Users!</string>
    <string name="getCatgoriesSucceeded">Get Catgories successfully!</string>
    <string name="getCatgoriesFailed">Failed to get Catgories!</string>
    <string name="getItemsSucceeded">Get Items successfully!</string>
    <string name="getItemsFailed">Failed to get Items!</string>
    <string name="loadingComplete">All data dowloaded successfully!</string>
    <string name="connectionFailed">Check your internet connection!</string>
    <string name="loginFailed">Invalid credentials. Please re-write your username and password</string>
    <string name="item_desc">Enter Item Desciption</string>
    <string name="categoryNameValid">Please enter a category name</string>
    <string name="itemDescValid">Please enter an item description</string>
    <string name="itemQtyValid">Please enter a valid quantity</string>
    <string name="buttonAddFirst">Please Click on Add Category Button</string>
    <string name="categoryAdded">Category Added successfully</string>
    <string name="categoryExist">Category is already exist</string>
    <string name="itemAdded">Item Added successfully</string>
    <string name="add_category">Add Category</string>
    <string name="add_item">Add Item</string>
    <string name="category">Enter Category Name</string>
    <string name="username">Enter your username</string>
    <string name="password">Enter your password</string>

    <string name="arabic">عربي</string>
    <string name="english">English</string>
    <string name="download_data">Download Data</string>
    <string name="scan_and_count">Scan and Count</string>
    <string name="bar_code">Bar Code:</string>
    <string name="Quantity">Quantity:</string>
    <string name="change_quantity">Change Quantity</string>
    <string name="export">Export</string>
    <string name="Scanner_barcode">BarCode</string>
    <string name="Scanner_Quantity">quantity</string>
    <string name="Recycle_Quantity">Quantity</string>
    <string name="activity_intent_filter_action">com.example.test.ACTION</string>
    <string name="datawedge_intent_data_String">com.symbol.datawedge.data_string</string>
    <string name="waiting_for_scan">Waiting for scan</string>
    <string name="exportSheetName">Data</string>
    <string name="data_Exported_Succssfully">Data Exported Succssfully</string>
</resources>