<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".MenuPages.DataEntry">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
        <TextView
            android:id="@+id/pagename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data_entry"
            android:textColor="@color/onPrimaryColor"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >

        <TextView
            android:id="@+id/labelCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_name"
            android:textSize="16sp"
            android:textColor="@color/onSecondaryColor"
            android:layout_gravity="center_vertical"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/category"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColorHint="@color/onSecondaryColor"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearItemDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/linearCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/labelItemDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:text="@string/itemDescription"
            android:textColor="@color/onSecondaryColor"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editItemDesc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/item_desc"
            android:textColorHint="@color/onSecondaryColor"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            tools:ignore="HardcodedText,VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/linearItemDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/labelQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:text="@string/quantity"
            android:textColor="@color/onSecondaryColor"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/itemQuantity"
            android:gravity="center"
            android:textColorHint="@color/onSecondaryColor"
            android:inputType="number"
            android:minHeight="48dp"
            tools:ignore="Autofill,HardcodedText,VisualLintTextFieldSize" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/add_category"
        android:textColor="@color/onSecondaryColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearQty"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/add_item"
        android:textColor="@color/onSecondaryColor"
        android:backgroundTint="@color/primaryColor"
        tools:ignore="HardcodedText"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/btnCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
