<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundColor"
    tools:context=".Scan.ScanAndCount">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/toolbar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >
        <TextView
            android:id="@+id/pagename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_and_count"
            android:textColor="@color/onPrimaryColor"
            android:textSize="26sp"
            tools:ignore="HardcodedText" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/linearBarCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" >

        <TextView
            android:id="@+id/labelBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar_code"
            android:textSize="16sp"
            android:textColor="@color/onSecondaryColor"
            android:layout_gravity="center_vertical"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/editBarCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/waiting_for_scan"
            android:minHeight="48dp"
            android:textColor="@color/onSecondaryColor"
            tools:ignore="HardcodedText,LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearQty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/linearBarCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <TextView
            android:id="@+id/labeQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:text="@string/quantity"
            android:textColor="@color/onSecondaryColor"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_gravity="center_vertical"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/editQty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="1"
            android:textColorHint="@color/onSecondaryColor"
            tools:ignore="HardcodedText,LabelFor,VisualLintTextFieldSize" />

        <CheckBox
            android:id="@+id/changeQtyCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_quantity"
            android:layout_margin="16dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header_title"
        android:layout_width="0dp"
        android:layout_height="28dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal"
        android:background="@color/primaryDarkColor"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/linearQty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:weightSum="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/Scanner_barcode"
            android:textColor="@color/onPrimaryColor"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/Recycle_Quantity"
            android:textColor="@color/onPrimaryColor"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintHeight_max="220dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnExport"
        app:layout_constraintTop_toBottomOf="@id/header_title" />

    <Button
        android:id="@+id/btnExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/export"
        android:textColor="@color/onSecondaryColor"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toTopOf="parent"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>
